--- a/Music transcribe/.classpath
+++ b/Music transcribe/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="D:/Java code/JavaFX/javafx-sdk-11.0.2/lib/javafx.swing.jar"/>
 	<classpathentry kind="lib" path="D:/Java code/JavaFX/javafx-sdk-11.0.2/lib/javafx.web.jar"/>
 	<classpathentry kind="lib" path="D:/Java code/JavaFX/javafx-sdk-11.0.2/lib/javafx-swt.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/mongo-java-driver-2.13.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
