--- a/Music transcribe/.classpath
+++ b/Music transcribe/.classpath
@@ -14,6 +14,8 @@
 	<classpathentry kind="lib" path="D:/Java code/JavaFX/javafx-sdk-11.0.2/lib/javafx.swing.jar"/>
 	<classpathentry kind="lib" path="D:/Java code/JavaFX/javafx-sdk-11.0.2/lib/javafx.web.jar"/>
 	<classpathentry kind="lib" path="D:/Java code/JavaFX/javafx-sdk-11.0.2/lib/javafx-swt.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/mongo-java-driver-2.13.3.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/mongodb-driver-3.12.7.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/bson-3.12.7.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/mongodb-driver-core-3.12.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
