--- a/Music transcribe/.classpath
+++ b/Music transcribe/.classpath
@@ -17,5 +17,21 @@
 	<classpathentry kind="lib" path="D:/Java code/mongodb-driver-3.12.7.jar"/>
 	<classpathentry kind="lib" path="D:/Java code/bson-3.12.7.jar"/>
 	<classpathentry kind="lib" path="D:/Java code/mongodb-driver-core-3.12.7.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/commons-cli-1.4.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/commons-codec-1.13.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpclient5-5.0.3.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpclient5-cache-5.0.3.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpclient5-fluent-5.0.3.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpclient5-testing-5.0.3.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpclient5-win-5.0.3.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpcore5-5.0.2.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpcore5-h2-5.0.2.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpcore5-reactive-5.0.2.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpcore5-testing-5.0.2.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/jna-5.2.0.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/jna-platform-5.2.0.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/reactive-streams-1.0.2.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/rxjava-2.2.8.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/slf4j-api-1.7.25.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
