--- a/Music transcribe/.classpath
+++ b/Music transcribe/.classpath
@@ -1,37 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-14">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
-			<attribute name="module" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Java code/JavaFX/javafx-sdk-11.0.2/lib/javafx.base.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/JavaFX/javafx-sdk-11.0.2/lib/javafx.controls.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/JavaFX/javafx-sdk-11.0.2/lib/javafx.fxml.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/JavaFX/javafx-sdk-11.0.2/lib/javafx.graphics.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/JavaFX/javafx-sdk-11.0.2/lib/javafx.media.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/JavaFX/javafx-sdk-11.0.2/lib/javafx.swing.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/JavaFX/javafx-sdk-11.0.2/lib/javafx.web.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/JavaFX/javafx-sdk-11.0.2/lib/javafx-swt.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/mongodb-driver-3.12.7.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/bson-3.12.7.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/mongodb-driver-core-3.12.7.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/commons-cli-1.4.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/commons-codec-1.13.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpclient5-5.0.3.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpclient5-cache-5.0.3.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpclient5-fluent-5.0.3.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpclient5-testing-5.0.3.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpclient5-win-5.0.3.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpcore5-5.0.2.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpcore5-h2-5.0.2.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpcore5-reactive-5.0.2.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/httpcore5-testing-5.0.2.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/jna-5.2.0.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/jna-platform-5.2.0.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/reactive-streams-1.0.2.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/rxjava-2.2.8.jar"/>
-	<classpathentry kind="lib" path="D:/Java code/httpcomponents-client-5.0.3/lib/slf4j-api-1.7.25.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
