--- a/Music transcribe/.classpath
+++ b/Music transcribe/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -11,5 +12,8 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/Java code/bson-3.12.7.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/mongodb-driver-3.12.7.jar"/>
+	<classpathentry kind="lib" path="D:/Java code/mongodb-driver-core-3.12.7.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
