--- a/Music transcribe/pom.xml
+++ b/Music transcribe/pom.xml
@@ -36,6 +36,12 @@
 			<artifactId>javafx-base</artifactId>
 			<version>16-ea+6</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-media -->
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-media</artifactId>
+			<version>16-ea+6</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
@@ -80,9 +86,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>3.2.0</version>
 				<configuration>
-					<release>12</release>
 					<archive>
 						<manifest>
 							<mainClass>main.Main</mainClass>
